fix: scroll overflow katex-display

--- a/src/Thin-Style.less
+++ b/src/Thin-Style.less
@@ -851,10 +851,7 @@ body[for="html-export"] {
     .katex-display {
         margin: 20px 0px 0px 0px !important;
         font-size: calc((var(--p-fontsize)) * 1px) !important;
-        max-width: 100% !important;
-        overflow-wrap: break-word !important;
-        word-wrap: break-word !important;
-        hyphens: auto !important;
+        overflow-x: auto !important;
     }
 
     .katex {
@@ -862,10 +859,6 @@ body[for="html-export"] {
         // font-family: KaTeX_Main, var(--normal-font-family);
         font-family: 'Fira Code', var(--normal-font-family);
         font-weight: 400;
-        max-width: 100% !important;
-        overflow-wrap: break-word !important;
-        word-wrap: break-word !important;
-        hyphens: auto !important;
 
         .mord {
             font-family: 'Fira Code', var(--normal-font-family);
